# MVC

./: .gitignore  README.md  importer.py  main.py  pyproject.toml  readings.csv
bll/: exceptions.py
bll/interfaces/: alerts_interface.py  devices_interface.py  organizations_interface.py  readings_interface.py  sensors_interface.py  users_interface.py
bll/services/: alerts_service.py  devices_service.py  organizations_service.py  readings_service.py  sensors_service.py  users_service.py
dal/: __init__.py  csv_reader.py  db_models.py
dal/interfaces/: alerts_interfaces.py  base_interfaces.py  db_interfaces.py  devices_interfaces.py  organizations_interfaces.py  readings_interfaces.py  sensors_interfaces.py  users_interface.py
dal/repositories/: alerts_repository.py  base_repository.py  db_repository.py  devices_repository.py  organizations_repository.py  readings_repository.py  sensors_repository.py  users_repository.py
generator/: csv_generator.py
presentation/: dependencies.py
presentation/routers/: alerts_router.py  auth.py  devices_router.py  frontend_router.py  organizations_router.py  readings_router.py  sensors_router.py  users_router.py
presentation/static/css/: style.css
presentation/static/js/: app.js
presentation/templates/: index.html  login.html
