[project]
name = "mvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "black>=26.3.1",
    "fastapi[standard]>=0.136.1",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]
